<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.springframework.ide.vscode</groupId>
	<artifactId>commons-parent</artifactId>
	<packaging>pom</packaging>
	<version>1.62.0-SNAPSHOT</version>
	<name>commons-parent</name>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.0</version>
		<relativePath></relativePath>
	</parent>

	<modules>
		<module>org.json</module>
		<module>commons-language-server</module>
		<module>commons-lsp-extensions</module>
		<module>language-server-test-harness</module>
		<module>commons-yaml</module>
		<module>commons-util</module>
		<module>commons-java</module>
		<module>java-properties</module>
		<module>commons-cf</module>
		<module>commons-maven</module>
		<module>commons-gradle</module>
		<module>commons-rewrite</module>
		<module>language-server-starter</module>
		<module>jpql</module>
	</modules>

	<repositories>
		<repository>
			<id>lsp4j-snapshots-repo</id>
			<name>lsp4j-snapshots-repo</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/org/eclipse/lsp4j/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>

		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-releases</id>
			<name>Spring Releases</name>
			<url>https://repo.spring.io/release</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>sonatype-oss-snapshots</id>
			<name>Sonatype OSS Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>gradle-repo</id>
			<name>Gradle Tooling Repo</name>
			<url>https://repo.gradle.org/gradle/libs-releases</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>

	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-snapshots</id>
			<url>https://repo.spring.io/snapshot</url>
		</pluginRepository>
		<pluginRepository>
			<id>spring-milestones</id>
			<url>https://repo.spring.io/milestone</url>
		</pluginRepository>
	</pluginRepositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<assertj-version>3.5.2</assertj-version>
		<slf4j-version>2.0.5</slf4j-version>
		<guava-version>31.1-jre</guava-version>
		<mockito-version>1.10.19</mockito-version>
		<jackson-2-version>2.5.0</jackson-2-version>
		<jersey-2-version>2.10</jersey-2-version>
		<lsp4j-version>0.19.0</lsp4j-version>
		<!-- NOTE: Reactor version must match version used by the CF client -->
		<cloudfoundry-client-version>3.8.0.RELEASE</cloudfoundry-client-version>
		<reactor-version>3.5.0</reactor-version>
		<reactor-netty>0.7.15.RELEASE</reactor-netty>
		<commons-io-version>2.16.1</commons-io-version>
		<commons-codec-version>1.13</commons-codec-version>

		<!-- Rewrite specific properties -->
		<rewrite-recipe-bom.version>2.23.1</rewrite-recipe-bom.version>
		<gradle.version>8.11</gradle.version>
		<rewrite-gradle-tooling-model.version>2.7.0</rewrite-gradle-tooling-model.version>
		<jgit-version>6.9.0.202403050737-r</jgit-version>
		
		<antlr.version>4.13.1</antlr.version>

		<signing.skip>true</signing.skip>
		<signing.alias>vmware</signing.alias>
		<java.version>21</java.version>
	</properties>

    <dependencyManagement>
        <dependencies>
			<!-- https://mvnrepository.com/artifact/org.openrewrite/rewrite-bom -->
			<dependency>
			    <groupId>org.openrewrite</groupId>
			    <artifactId>rewrite-bom</artifactId>
			    <version>8.42.5</version>
			    <type>pom</type>
                <scope>import</scope>
			</dependency>
            <dependency>
                <groupId>org.openrewrite.recipe</groupId>
                <artifactId>rewrite-recipe-bom</artifactId>
                <version>${rewrite-recipe-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.gradle</groupId>
                <artifactId>gradle-tooling-api</artifactId>
                <version>${gradle.version}</version>
            </dependency>
	        <dependency>
	            <groupId>org.openrewrite.gradle.tooling</groupId>
	            <artifactId>model</artifactId>
	            <version>${rewrite-gradle-tooling-model.version}</version>
	        </dependency>
			<dependency>
				<groupId>org.eclipse.jgit</groupId>
				<artifactId>org.eclipse.jgit</artifactId>
				<version>${jgit-version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>1.12.0</version>
			</dependency>
        </dependencies>
    </dependencyManagement>

	<build>
		<plugins>
			<!-- Set source 21 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jarsigner-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>sign</id>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<skip>${signing.skip}</skip>
					<alias>${signing.alias}</alias>
					<keystore>${signing.keystore}</keystore>
					<storetype>${signing.storetype}</storetype>
					<storepass>${signing.store.password}</storepass>
					<keypass>${signing.key.password}</keypass>
					<!-- <tsa>http://sha256timestamp.ws.symantec.com/sha256/timestamp</tsa> -->
					<tsa>http://timestamp.digicert.com</tsa>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration combine.self="append">
					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
	
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>bamboo-signing</id>
			<properties>
				<signing.store.password>${env.bamboo_vault_signing_passphrase}</signing.store.password>
				<signing.key.password>${env.bamboo_vault_signing_passphrase}</signing.key.password>
			</properties>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-simple</artifactId> 
			<version>${slf4j-version}</version> </dependency> -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
